--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://NijieZh.github.io",
+  "homepage": "http://NijieZh.github.io/home",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
